mythril_multiboot2/log
+ "rustc" "--print" "sysroot"
+ "rustc" "--print" "target-list"
+ RUSTFLAGS="--sysroot /home/adam/repos/mythril/target/sysroot"
+ RUSTDOCFLAGS="--sysroot /home/adam/repos/mythril/target/sysroot"
+ "/home/adam/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/cargo" "build" "--target" "target.json" "--verbose"
       Fresh cc v1.0.50
       Fresh semver-parser v0.7.0
       Fresh unicode-xid v0.0.4
       Fresh spin v0.5.2
       Fresh quote v0.3.15
       Fresh bit_field v0.10.0
       Fresh cfg-if v0.1.10
       Fresh nasm-rs v0.1.7
       Fresh ux v0.1.3
       Fresh spin v0.4.10
       Fresh semver v0.9.0
       Fresh rustc_version v0.2.3
       Fresh bitflags v1.2.1
       Fresh synom v0.11.3
       Fresh linked_list_allocator v0.6.5
warning: unused import: `cc`
 --> mythril_multiboot2/build.rs:2:5
  |
2 | use cc;
  |     ^^
  |
  = note: `#[warn(unused_imports)]` on by default

       Fresh syn v0.11.11
       Fresh log v0.4.8
       Fresh slab_allocator v0.3.5
   Compiling mythril_multiboot2 v0.1.0 (/home/adam/repos/mythril/mythril_multiboot2)
       Fresh derive-try-from-primitive v0.1.0
       Fresh raw-cpuid v7.0.3
       Fresh x86 v0.27.0
       Fresh mythril_core v0.1.0 (/home/adam/repos/mythril/mythril_core)
     Running `/home/adam/repos/mythril/target/debug/build/mythril_multiboot2-79be4c0e858aa660/build-script-build`
warning: unused import: `core::convert::AsRef`
 --> mythril_core/src/logger.rs:1:5
  |
1 | use core::convert::AsRef;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `record`
  --> mythril_core/src/logger.rs:25:19
   |
25 |     fn log(&self, record: &log::Record) {
   |                   ^^^^^^ help: consider prefixing with an underscore: `_record`
   |
   = note: `#[warn(unused_variables)]` on by default

error: failed to run custom build command for `mythril_multiboot2 v0.1.0 (/home/adam/repos/mythril/mythril_multiboot2)`

Caused by:
  process didn't exit successfully: `/home/adam/repos/mythril/target/debug/build/mythril_multiboot2-79be4c0e858aa660/build-script-build` (exit code: 101)
--- stdout
running: "nasm" "-felf64" "-gdwarf" "/home/adam/repos/mythril/mythril_multiboot2/src/header.S" "-o" "/home/adam/repos/mythril/target/target/debug/build/mythril_multiboot2-122ee5bb5a68ebd1/out/src/header.o"
running: "nasm" "-felf64" "-gdwarf" "/home/adam/repos/mythril/mythril_multiboot2/src/boot.S" "-o" "/home/adam/repos/mythril/target/target/debug/build/mythril_multiboot2-122ee5bb5a68ebd1/out/src/boot.o"

--- stderr
/home/adam/repos/mythril/mythril_multiboot2/src/boot.S:52: error: symbol `BSP_STACK_TOP' undefined
/home/adam/repos/mythril/mythril_multiboot2/src/boot.S:53: error: symbol `PAGE_HIERARCHY' undefined
/home/adam/repos/mythril/mythril_multiboot2/src/boot.S:91: error: label `..@6.loop' changed during code generation [-w+error=label-redef-late]
/home/adam/repos/mythril/mythril_multiboot2/src/boot.S:34: ... from macro `map_page_directory' defined here [-w+error=label-redef-late]
/home/adam/repos/mythril/mythril_multiboot2/src/boot.S:125: error: label `_start.after' changed during code generation [-w+error=label-redef-late]
/home/adam/repos/mythril/mythril_multiboot2/src/boot.S:130: error: label `GDT64' changed during code generation [-w+error=label-redef-late]
/home/adam/repos/mythril/mythril_multiboot2/src/boot.S:152: error: label `GDT64.pointer' changed during code generation [-w+error=label-redef-late]
thread 'main' panicked at 'nonzero exit status: exit code: 1', /home/adam/.cargo/registry/src/github.com-1ecc6299db9ec823/nasm-rs-0.1.7/src/lib.rs:343:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace.

